Update patch to new built-time approach